# pocket-commander

./: .gitignore  .main_terminal_history  README.md  pocket_commander.conf.yaml  pyproject.toml  requirements.txt  stuff.ipynb
.roo/rules/: additional-rules.md  project-guidelines.md
cline_docs/: activeContext.md  additional-rules.md  productContext.md  progress.md  project-guidelines.md  systemPatterns.md  techContext.md  tool_agent_mode_plan.md
docs/: ag_ui_client_refactor_plan.md  agent_refactor_plan_pubsub.md  command_handling_overview.md  command_system_plan.md  enhanced_event_system_plan.md  fetch_tool_integration_plan.md  plan_v8.1_functional_agent_composition.md  plan_v8.1_functional_mode_composition.md  pocketflow-guides.md  pocketflow_centric_architecture_plan.md  terminal_interface_plan.md  tool_agent_agent_plan.md  tool_annotation_system_plan.md  tool_enabled_llm_node_refactor_plan.md  zeromq_event_bus_architecture.md
pocket_commander/: __init__.py  agent_resolver.py  app_core.py  config_loader.py  event_bus.py  events.py  main.py  nodes.py  publisher_poc_test.py  subscriber_poc_test.py  terminal_interface.py  types.py  zeromq_event_bus.py  zmq_broker_poc.py
pocket_commander/ag_ui/: client.py  events.py  terminal_client.py  types.py
pocket_commander/agents/: __init__.py
pocket_commander/commands/: builtin_commands.py  core.py  decorators.py  definition.py  io.py  parser.py  terminal_io.py
pocket_commander/core_agents/: composer_agent.py  main_agent.py  tool_agent.py
pocket_commander/flows/: terminal_interaction_flow.py  tool_flow.py
(+39 files in other folders)
